# maoo

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  demo.sh  docker-compose.yml  main.py  pyproject.toml
cli/: app.py  commands.py  formatters.py  render.py
core/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  tracing.py  types.py
docker/: app.Dockerfile  mock_api.Dockerfile
docs/: architecture.md  evaluation.md  safety-and-policy.md
eval/: __init__.py  runner.py  scenarios.json  scoring.py  trace_export.py
execution/: __init__.py  executor.py  monitors.py  refinement.py  tool_registry.py  tool_schemas.py
llm/: __init__.py  heuristic_provider.py  openai_compatible.py  provider.py
memory/: __init__.py  long_term.py  retrieval.py  short_term.py
mock_api/: __init__.py  faults.py  models.py  routes.py  server.py  state.py
perception/: __init__.py  agent.py  intent_extractor.py  state_builder.py  task_classifier.py
planning/: __init__.py  critic.py  plan_validator.py  planner.py  policy.py
prompts/: critic_prompt.md  perception_prompt.md  planner_prompt.md
scripts/: run_demo.py  run_eval.py  seed_long_term_memory.py
sql/: schema.sql  seed_data.sql
tests/: conftest.py  test_calc_tool.py  test_cli_trace_rendering.py  test_db_query_tool.py  test_eval_runner_and_scoring.py  test_examples_trace_exports.py  test_executor_happy_path.py  test_executor_refinement_retry.py  test_executor_replan_remaining.py  test_executor_stop_rules.py  test_file_write_tool.py  test_http_tools_with_mock_api.py  test_memory_long_term_retrieval.py  (+7 more)
(+18 files in other folders)
