[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maoo"
version = "0.1.0"
description = "Multi-Agent Autonomous Operations Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "core*",
  "memory*",
  "perception*",
  "planning*",
  "execution*",
  "llm*",
  "mock_api*",
  "eval*",
  "cli*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
